@@ -3,6 +3,11 @@ Released 2.0.12 2005-11-xx
 
 Changes since 2.0.11:
 
+* OpenLDAP 2.2+ required now to build.
+
+Modules/
+* Dropped all occurences of '#ifdef #LDAP_VENDOR_VERSION'.
+
 Lib/
 * Fixed ldap.schema.models.DITStructureRule.__str__() to
   separate SUP rule-ids with a single space instead of ' $ '
